--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class= "content-section">
         <form method="POST">
@@ -6,7 +7,7 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4"> Delete Post</legend>
             <h2>Are you sure you want to delete this post "{{object.title}}" </h2>
-                {{ form.as_p }}
+                {{ form|crispy }}
             </fieldset>
             <div class= "form-group">
                 
