--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,7 +2,11 @@
 {% block content %}
 {% for post in posts %}
 <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url}}"">
+
+    {% if post.author.profile.image %}
+
+    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url}}">
+    {% endif %}
          <div class="media-body">
            <div class="article-metadata">
              <a class="mr-2" href="#">{{ post.author }}</a>
