--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,7 +3,10 @@
 {% for post in posts %}
 <article class="media content-section">
 
-   
+    {% if post.author %}
+
+    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url}}">
+    {% endif %}
          <div class="media-body">
            <div class="article-metadata">
              <a class="mr-2" href="#">{{ post.author }}</a>
